added my picture to about page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -2,8 +2,15 @@
 layout: '../layouts/Layout.astro'
 title: 'About Tyler Baker'
 ---
+import profile from '/Profile Image.png'
+
+
+<div style="display:flex; gap: 5rem;justify-content; space-between; align-items: center;">
 
 # About Me
+
+<img src={profile} alt="profile pic" style="width: 100%; max-width: 10rem;border-radius: 20rem;" />
+</div>
 ## Who am I?
 ```javascript
 
