--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,6 +1,8 @@
 ---
 layout: '../layouts/Layout.astro'
-title: 'About Tyler Baker'
+title: 'About Me'
+description: "I am a web designer and music teacher. Come learn coding with me!"
+type: "about"
 ---
 import profile from '/Profile Image.png'
 
