--- a/src/pages/posts/i-created-a-tutorial-video-with-code.mdx
+++ b/src/pages/posts/i-created-a-tutorial-video-with-code.mdx
@@ -4,7 +4,7 @@ title: 'I Created a Tutorial Video with Code'
 url: '/posts/i-created-a-tutorial-video-with-code'
 date: 'October 31, 2022'
 tags: 'Remotion, React'
-description: 'Finding a way to make my life easier while making higher quality content is always a pleasant time. I made a video using the React library Remotion.'
+description: 'Finding a way to make my life easier while making higher quality content is always a pleasant time. When I heard about making videos in React with Remotion, I knew exactly what I was going to do with it...'
 
 ---
 import Video from '../../components/Video.astro'
