update open source article

--- a/src/pages/posts/getting-started-with-open-source.mdx
+++ b/src/pages/posts/getting-started-with-open-source.mdx
@@ -5,7 +5,6 @@ url: '/posts/getting-started-with-open-source'
 date: 'January 17, 2023'
 tags: 'Open Source, GitHub'
 description: 'One of the greatest ways to learn about programming is to work on real-life projects! In this guide, we will discuss the process of contributing to projects on GitHub.'
-
 draft: true
 ---
 
@@ -15,4 +14,6 @@ contributing to open source can be daunting at first. My first time submitting a
 repository, I was extremely nervous.
 
 Especially if you are self-taught or just recently started programming, it can be nerve-wracking to
-make changes to a codebase. "What if I completely screw up the project?"
+make changes to a codebase. "What if I completely screw up the project?" However, you do not need to worry about this. Your code will be reviewed before
+your pull request is merged, so it is unlikely that you will cause any major problems with the program. And if bugs arise, they can be fixed!
+
