Image optimization for the photo of me on index and about pages

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -4,7 +4,7 @@ title: 'About Me'
 description: "I am a web designer and music teacher. Come learn coding with me!"
 type: "about"
 ---
-import profile from '/Profile Image.png'
+import profile from '/Profile Image.jpg'
 
 
 <div style="display:flex; gap: 5rem;justify-content; space-between; align-items: center;">
